--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.3.1",
+    "cli-table2": "^0.2.0",
     "commander": "^2.14.1",
     "figlet": "^1.2.0",
-    "inquirer": "^5.1.0"
+    "inquirer": "^5.1.0",
+    "cli-table2": "~"
   }
 }
